Bug 358127 - Incorrect Hungarian and Spanish feeds address
Summary: Incorrect Hungarian and Spanish feeds address
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-17 14:55 UTC by André Marcelo Alvarenga
Modified: 2016-01-17 20:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-17 14:55:09 UTC
These feeds are installed by default.

*  Hungarian

I did not found the correct address. The http://kde.hu/ address redirects to https://www.kde.org/.

*  Spanish

Correct feed address:
http://planet.kde-espana.org/atom.xml

Reproducible: Always
Comment 1 Laurent Montel 2016-01-17 20:03:48 UTC
Git commit de8c3fd37945df8866f2edf3f85da719c2e8a9c6 by Montel Laurent.
Committed on 17/01/2016 at 20:02.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 358127 - Incorrect Hungarian and Spanish feeds address

Thanks for  André Marcelo Alvarenga to give me info about theses defaults rss.

I commented Hungarian rss feed as there is not a good url.

FIXED-IN: 5.1.2

M  +3    -2    akregator/src/akregator_part.cpp

http://commits.kde.org/kdepim/de8c3fd37945df8866f2edf3f85da719c2e8a9c6