Fix Bug 358127 - Incorrect Hungarian and Spanish feeds address

Thanks for  André Marcelo Alvarenga to give me info about theses defaults rss.

I commented Hungarian rss feed as there is not a good url.

FIXED-IN: 5.1.2
BUG: 358127